--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,38 @@
-#App {
-    max-width: 1280px;
+* {
     margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+    padding: 0 auto;
   }
   
+.App{
+  text-align: center;
+}
+
+.UserSection{
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  justify-content: space-evenly;
+}
+
+.CounterSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 5vh;
+  font-size: 24px;
+  border: 2px solid rgb(210, 218, 241);
+  padding: 20px;
+  background-color: rgb(218, 224, 255);
+}
+
+.btn-section{
+  display: flex;
+  width: 200px;
+  justify-content: space-around;
+}
+
+.btn{
+  background-color: rgb(46, 5, 100);
+  color: black;
+}
