--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,10 +13,10 @@ h2{
     align-items: center;
     background-color: rgb(66, 104, 124);
     width: 100%;
-    min-height: 10vh;
+    min-height: 8vh;
     border: 2px solid rgb(1, 76, 126);
 }
 
 .logo{
-    width: 10%;
+    width: 12vh;
 }
