--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,17 +8,18 @@ ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
+    width: 100%;
     padding: 0; 
 }
 
-li {
+.li {
+    text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 18px;
     list-style-type: none;
     transition: color 0.3s; 
 }
 
-li:hover {
+.li:hover {
     color: rgb(181, 181, 221); 
 }
