ultima entrega fc

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@ h2{
 .Header{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-Productos: center;
     background-color: rgb(66, 104, 124);
     width: 100%;
     min-height: 8vh;
