--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,7 +7,7 @@ nav {
 ul {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-Productos: center;
     width: 100%;
     padding: 0; 
 }
