--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,22 @@
 * {
-    margin: 0 auto;
-    padding: 0 auto;
-  }
-  
-.App{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+}
+
+body {
+  font-family: Arial, sans-serif; 
+}
+
+.App {
   text-align: center;
 }
 
-.UserSection{
+.UserSection {
   display: flex;
   margin-top: 40px;
   margin-bottom: 40px;
   justify-content: space-evenly;
 }
+
+
