--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,21 +1,32 @@
-h1 {
-    color: rgb(221, 226, 230);
-}
-
-h2 {
-    color: rgb(214, 225, 234);
-}
-
 .Header {
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
     background-color: rgb(66, 104, 124);
     width: 100%;
     min-height: 8vh;
     border: 2px solid rgb(1, 76, 126);
+    overflow: hidden; 
 }
 
-.Header img {
-    width: 80px; 
+.Header-content {
+    max-width: 8px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+
+.Header h1,
+.Header h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.Header h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(174, 198, 217);
+}
+
+.Header h2 {
+    color: rgb(214, 225, 234);
 }
