--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,21 +2,36 @@
     width: 100%;
     background-color: rgb(13, 7, 50);
     min-height: 5vh;
+    padding: 10px 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 0;
+    list-style: none;
+}
+
+.logo {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+.logo h1 {
+    margin: 0;
+    padding: 0;
+    color: rgb(255, 255, 255);
 }
 
 .menu-link {
     text-decoration: none;
     color: rgb(255, 255, 255);
-    font-size: 18px;
-    list-style-type: none;
+    font-size: 20px;
+    margin-left: 10px; 
     transition: color 0.3s;
 }
 
